2017-11-30  Araki Ken  <arakiken@users.sf.net>

	* doc/en/PROTOCOL, doc/en/README.fb, doc/ja/README.fb, README.ja: Updated.

	* vt_line.c: line->ctl_info.ot_layout->complex_shape and
	  line->ctl_info.ot_layout->has_var_width_char are checked.

	* vt_ot_layout.[ch]:
	  complex_shape and has_var_width_char are added to vt_ot_layout_state_t.

	* vt_shape.[ch]: IS_VAR_WIDTH_CHAR() is added.

	* hb.c: convert_text_to_glyphs() always sets glyph indexes in 'shaped'.

	* ui_screen.c: vt_line_unshape() is added before 'return 0' in draw_cursor().

	* ui_draw_str.[ch]: ui_calculate_mlchar_width() -> ui_calculate_vtchar_width()

2017-11-26  Araki Ken  <arakiken@users.sf.net>

	* MLTermPty.c:
	  vt_char_underline_style() and vt_char_is_crossed_out() => vt_char_line_style()

	* skk/dict.c:
	  - set_blocking() -> set_nonblocking()
	  - check_protocol_4() returns 0 if recv() returns error except EAGAIN.

2017-11-26  Araki Ken  <arakiken@users.sf.net>

	* vte.c: Return value type of vte_terminal_draw() is fixed.

2017-11-25  Araki Ken  <arakiken@users.sf.net>

	* quartz/ui_window.c, xlib/ui_window.c: ui_window_set_maximize_flag() supports
	  MAXIMIZE_HORIZONTAL and MAXIMIZE_VERTICAL.

	* quartz/cocoa.[hm]: window_move_resize() is added.

	* fb/ui_window.c: ui_window_set_maximize_flag() calls ui_display_set_maximized()
	  on wayland.

	* wayland/ui_display.[ch]: ui_display_set_maximized() is added.

	* ui_window.h, */ui_window.c: 'Window *child' is removed from arguments of
	  ui_window_translate_coordinates().

	* vte.c: vt_xterm_event_listener_t::xterm_resize is overridden by
	  xterm_resize() in vte.c which supports MAXIMIZE_FULL and MAXIMIZE_RESTORE.

2017-11-23  Araki Ken  <arakiken@users.sf.net>

	* ui_draw_str.c:
	  - LS_OVERLINE is processed.
	  - is_crossed_out and underline_style are united to line_style.

	* ui_im_{status|candidate}_screen.c:
	  Fixes of vt_char_set() and vt_char_combine() arguments.
