@@ -1,3 +1,8 @@
+2017-12-02  Araki Ken  <arakiken@users.sf.net>
+
+	* ui_font_ft.c: ISCII and ISO10646_UCS4_1 fonts are forced to be treated as
+	  proportional.
+
 2017-11-30  Araki Ken  <arakiken@users.sf.net>
 
 	* doc/en/PROTOCOL, doc/en/README.fb, doc/ja/README.fb, README.ja: Updated.
